--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "mikey179/vfsStream": "^1.6"
     },
     "require-dev": {
         "symfony/var-dumper": "~3.0",
