--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,5 +1,8 @@
 filter:
-    excluded_paths: [tests/*]
+    excluded_paths: [vendor/*, tests/*]
+
+before_commands:
+    - 'composer install --dev --prefer-source'
 
 checks:
     php:
@@ -18,6 +21,15 @@ checks:
         fix_doc_comments: true
 
 tools:
-    external_code_coverage:
-        timeout: 600
-        runs: 3
+    external_code_coverage: true
+    php_mess_detector: true
+    php_code_sniffer: true
+    sensiolabs_security_checker: true
+    php_pdepend: true
+    php_loc:
+        enabled: true
+        excluded_dirs: [vendor, tests]
+    php_cpd:
+        enabled: true
+        excluded_dirs: [vendor, tests]
+
