--- a/composer.json
+++ b/composer.json
@@ -9,24 +9,15 @@
         "testing"
     ],
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Marcos Segovia",
-            "email": "velozmarkdrea@gmail.com",
-            "homepage": "http://www.marcossegovia.com",
-            "role": "Developer"
-        }
-    ],
     "require": {
-        "php": ">=7.0",
-        "mikey179/vfsStream": "^1.6"
+        "php": ">=7.1"
     },
     "require-dev": {
-        "symfony/var-dumper": "~3.0",
-        "phpunit/phpunit": "~5.0",
-        "mockery/mockery": "~0.9.5",
-        "behat/behat": "~3.2",
-        "squizlabs/php_codesniffer": "~2.3"
+        "behat/behat": "^3.4",
+        "mikey179/vfsStream": "^1.6",
+        "phpunit/phpunit": "^7.0",
+        "squizlabs/php_codesniffer": "^3.2",
+        "symfony/var-dumper": "^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -35,7 +26,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "KataTest\\": "tests"
+            "Kata\\": "tests/Unit",
+            "Kata\\Behat\\": "tests/Integration"
         }
     },
     "scripts": {
@@ -43,5 +35,9 @@
         "test-integration": "php vendor/bin/behat --suite example",
         "format": "phpcbf --standard=psr2 src/"
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true
+    }
 }
