--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "ramsey/uuid": "^3.7"
     },
     "require-dev": {
         "behat/behat": "^3.4",
