--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,7 +15,7 @@
 
     <testsuites>
         <testsuite name="Application Test Suite">
-            <directory>tests</directory>
+            <directory>tests/Unit/Rover</directory>
         </testsuite>
     </testsuites>
 
